<resources>
    <string name="app_name">Card</string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="setting">Setting</string>
    <string name="sign_in">Sign In</string>
    <string name="id">ID : </string>
    <string name="remaining_balance">Remaining balance</string>
    <string name="qr_scanner">Qr:Scanner</string>
    <string name="add_credit">Add credit</string>
    <string name="purchase">Purchase</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="id_number">ID Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign">Sign</string>
    <string name="an_e_mail_has_been_sent_to_your_registered_e_mail_address_please_enter_the_verification_code_included_in_that_e_mail">An e-mail has been sent to your registered e-mail address please enter the verification code included in that e-mail.</string>
    <string name="please_note_that_the_verification_code_will_expire_24_hours_after_the_e_mail_was_sent">Please note that the verification code will expire 24 hours after the e-mail was sent</string>
    <string name="submit">Submit</string>
    <string name="registration_success">Registration Success !</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome !</string>
    <string name="future_is_here">Future is here</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="login">login</string>
    <string name="qrcode">Qrcode</string>
    <string name="name">Name :</string>
    <string name="remaining_balance_is">Remaining balance is:</string>
    <string name="no_any_purchase">No any purchase</string>
    <string name="edit_account">Edit Accounts</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="code_number">Code Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">About</string>
    <string name="add_purchase">Add Purchase</string>
    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="admin">Admin</string>
    <string name="change_password">Change PAssword</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

</resources>
