<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".RegisterActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"


            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/title"
                android:text="@string/sign_up"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"/>

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/back_btn"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow"/>

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:background="@drawable/back2"
        android:layout_below="@id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/frame"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/user_name"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/colorAccent2"
            android:inputType="text"
            android:textColor="@color/colorAccent2"
            android:hint="@string/user_name"
            android:background="@drawable/rounded_edittext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/id_number"
            android:inputType="number"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/colorAccent2"
            android:textColor="@color/colorAccent2"
            android:hint="@string/id_number"
            android:background="@drawable/rounded_edittext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/colorAccent2"
            android:id="@+id/password"
            android:textSize="@dimen/_12sdp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent2"
            android:hint="@string/password"
            android:background="@drawable/rounded_edittext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/confirm_password"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorAccent2"
            android:textColorHint="@color/colorAccent2"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:background="@drawable/rounded_edittext"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/e_mail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/colorAccent2"
            android:textColor="@color/colorAccent2"
            android:hint="@string/e_mail"
            android:background="@drawable/rounded_edittext"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorAccent2"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/sign_up"
            android:text="@string/sign"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>