<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent2"
        android:padding="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"

            android:id="@+id/title"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"

            />

    </RelativeLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/_5sdp"
      android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="@dimen/_14sdp"
        android:textColor="#000"

        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />

      <EditText
          android:id="@+id/name"
          android:layout_height="@dimen/_35sdp"
          android:layout_width="match_parent"
          android:layout_marginEnd="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_3sdp"
          android:textSize="@dimen/_14sdp"
          android:inputType="textEmailAddress"
          android:background="@drawable/rounded_edittext" />

  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/_14sdp"
            android:textColor="#000"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_height="@dimen/_35sdp"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:inputType="textPassword"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>

    <Button
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_14sdp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/send"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:background="@color/colorAccent2"/>


</LinearLayout>
