<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/ll2"
        android:layout_marginBottom="@dimen/_30sdp"

        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:background="@drawable/user"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/text_color"
            android:text="@string/id"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:id="@+id/id_number"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/text_color"
                android:text=" "/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/text_color"
                android:text="@string/name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:id="@+id/name"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/text_color"
                android:text=" "/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll2"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


<ImageView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="vertical"
            android:id="@+id/Remaining"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/wallet2"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/remaining_balance"/>

        </LinearLayout>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/qr_qode"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/qr_code"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/qr_scanner"/>

        </LinearLayout>


    </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/credit"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/credit_card_add"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/add_credit"/>

            </LinearLayout>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_5sdp"

                android:id="@+id/purchase"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/purchase"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/text_color"
                    android:text="@string/purchase"/>

            </LinearLayout>


        </LinearLayout>


</LinearLayout>
</RelativeLayout>
