<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".RemainingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:id="@+id/toolbar"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow"
            android:id="@+id/Back_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/remaining_balance"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp" />

    </RelativeLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_100sdp"
        android:orientation="vertical">



        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_balance_is"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"
                android:textColor="#000"

                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/balnce"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:textColor="@color/text_color"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <Button
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:id="@+id/ok"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:background="@color/colorAccent2"/>


    </LinearLayout>

</RelativeLayout>