<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:id="@+id/edit_account"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/account"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/edit_account"
            android:layout_weight=".1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight=".9"
            android:layout_gravity="end"
            android:background="@drawable/arrow2"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:id="@+id/help"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/help"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:text="@string/help"
                android:layout_weight=".1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight=".9"
                android:layout_gravity="end"
                android:background="@drawable/arrow2"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:id="@+id/logout"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/logout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:text="@string/log_out"
                android:layout_weight=".1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight=".9"
                android:layout_gravity="end"
                android:background="@drawable/arrow2"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/text_color"/>



</LinearLayout>
